<resources>
    <string name="app_name">BangkitAndroid</string>
    <string name="length">Panjang</string>
    <string name="width">Lebar</string>
    <string name="height">Tinggi</string>
    <string name="calculate">Hitung</string>
    <string name="result">Hasil</string>
    <string name="scan_description">Cari tahu penyakit tanamanmu di sini!</string>
    <string name="riwayat">Riwayat</string>
    <string name="lihat_semua">Lihat Semua</string>
    <string name="card_image">Card Image</string>
    <string name="blog">Blog</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="history_not_logged">Masuk untuk menyimpan riwayat penyakit</string>
    <string name="edit">Edit</string>
    <string name="edit_profile">Edit Profil</string>
    <string name="name">Nama</string>
    <string name="phone_number">Nomor Telepon</string>
    <string name="register">Daftar</string>
    <string name="login">Masuk</string>
    <string name="logout">Keluar</string>
    <string name="save">Simpan</string>
    <string name="profile_not_logged_in">Masuk untuk mengakses profil</string>
    <string name="fill_name">Isi nama baru</string>
    <string name="fill_phone">Isi nomor telepon baru</string>
    <string name="disease_detail_image">Disease Detail Image</string>
    <string name="time_icon">Time Icon</string>
    <string name="cara_mengobati">Cara Mengobati</string>
    <string name="rekomendasi_produk">Rekomendasi Produk</string>
    <string name="back_button">Back Button</string>
    <string name="unggah_gambar">Unggah Gambar</string>
    <string name="ambil_ulang">ambil ulang</string>
    <string name="image_preview">Image Preview</string>
    <string name="sedang_diproses">Sedang Diproses</string>
    <string name="judul_blog">Judul Blog</string>
    <string name="author">Pak Slamet</string>
    <string name="add_a_comment">Berikan Komentar</string>
    <string name="kirim">Kirim</string>
    <string name="komentar">Komentar</string>
    <string name="masuk">Masuk</string>
    <string name="nomor_telepon">Nomor Telepon</string>
    <string name="kata_sandi">Kata Sandi</string>
    <string name="masukkan_nomor_telepon">Masukkan Nomor Telepon</string>
    <string name="masukkan_kata_sandi">Masukkan Kata Sandi</string>
    <string name="masukkan_nama">Masukkan Nama</string>
    <string name="nama">Nama</string>
    <string name="daftar">Daftar</string>
    <string name="something_wrong">Something Wrong</string>
    <string name="take_photo">Ambil foto</string>
    <string name="gallery">Galeri</string>
    <string name="fill_new_name">Nama sama dengan nama lama</string>
    <string name="fill_new_phone">Nomor telepon sama dengan nomor telepon lama</string>
    <string name="flip_camera">Balik kamera</string>
    <string name="please_pick_image">Silakan ambil gambar tanaman Anda</string>
    <string name="disease_name_label">Nama Penyakit</string>
    <string name="analysis_failed">Gagal Menganalisis</string>
    <string name="connection_error">Jaringan Bermasalah</string>
    <string name="timeout">Time Out</string>
    <string name="retry">Retry</string>
    <string name="belum_ada_komentar">Belum ada komentar.</string>
    <string name="masuk_untuk_berkomentar">Masuk untuk berkomentar</string>
</resources>