<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green_100"
    android:orientation="vertical"
    tools:context=".ui.authentication.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="16dp"
        android:paddingHorizontal="16dp"
        tools:ignore="UseCompoundDrawables">
        <ImageView
            android:id="@+id/btn_login_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="4dp"
            android:src="@drawable/baseline_arrow_back_ios_24"
            android:contentDescription="@string/back_button"/>
        <TextView
            android:id="@+id/tv_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/masuk"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/black" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nomor_telepon"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/green_400"
        android:layout_marginTop="24dp"
        android:layout_marginStart="40dp"
        android:drawablePadding="4dp"/>

    <com.example.bangkitandroid.component.PhoneNumberEditText
        android:id="@+id/et_nomor_telepon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_edit_text_white"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:padding="10dp"
        android:inputType="phone"
        android:textColorHint="@color/green_200"
        android:hint="@string/masukkan_nomor_telepon"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/kata_sandi"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/green_400"
        android:layout_marginTop="24dp"
        android:layout_marginStart="40dp"
        android:drawablePadding="4dp"/>

    <com.example.bangkitandroid.component.PasswordEditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_edit_text_white"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:padding="10dp"
        android:inputType="textPassword"
        android:textColorHint="@color/green_200"
        android:hint="@string/masukkan_kata_sandi"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>
    
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="24dp">
        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/progressBar"
            android:layout_gravity="right"
            android:visibility="gone"
            android:layout_alignTop="@+id/btn_masuk"
            android:layout_alignRight="@+id/btn_masuk"
            android:layout_alignEnd="@+id/btn_masuk" />

        <Button
            android:id="@+id/btn_masuk"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_edit_text_green"
            android:layout_marginBottom="16dp"
            android:textSize="16sp"
            android:enabled="false"
            android:text="@string/masuk"
            android:textColor="@color/green_400" />

    </RelativeLayout>


</LinearLayout>