<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/green_100"
    tools:context=".ui.profile.ProfileLoggedActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit_profile"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="16dp"
        android:textColor="@color/black"
        android:drawablePadding="4dp"
        app:drawableStartCompat="@drawable/leaf" />

    <ImageView
        android:id="@+id/edit_photo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="16dp"
        android:layout_gravity="center"
        android:contentDescription="@string/profile"
        tools:src="@tools:sample/avatars"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:text="@string/name"
        android:textSize="16sp"
        android:textColor="@color/black"/>

    <EditText
        android:id="@+id/edit_name"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:background="@drawable/rounded_edit_text"
        android:inputType="text"
        android:autofillHints="name"
        android:hint="@string/name"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/black"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:text="@string/phone_number"
        android:textSize="16sp"
        android:textColor="@color/black"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/edit_phone"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:background="@drawable/rounded_edit_text"
            android:inputType="phone"
            android:autofillHints="phone"
            android:hint="@string/phone_number"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/black" />

        <com.example.bangkitandroid.component.ElevatedButton
            android:id="@+id/save_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginBottom="24dp"
            android:text="@string/save"
            android:textSize="16sp"
            android:textStyle="bold"/>
    </RelativeLayout>

</LinearLayout>