<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/green_100"
    tools:context=".ui.profile.ProfileLoggedActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/profile"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="16dp"
        android:textColor="@color/black"
        android:drawablePadding="4dp"
        app:drawableStartCompat="@drawable/leaf" />

    <TextView
        android:id="@+id/edit_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginEnd="40dp"
        android:text="@string/edit"
        android:textSize="14sp"
        android:textColor="@color/black"
        android:drawablePadding="4dp"
        app:drawableStartCompat="@drawable/icon_edit"/>

    <ImageView
        android:id="@+id/person_photo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="16dp"
        android:layout_gravity="center"
        android:contentDescription="@string/profile"
        tools:src="@tools:sample/avatars"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:text="@string/name"
        android:textSize="16sp"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/person_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:text="@string/name"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/black"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:text="@string/phone_number"
        android:textSize="16sp"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/person_phone"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:text="@string/phone_number"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/black"/>

    <com.example.bangkitandroid.component.ElevatedButton
        android:id="@+id/logout_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="24dp"
        android:text="@string/logout"
        android:textSize="16sp"
        android:textStyle="bold"/>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/bottom_navigation_background"
        android:elevation="8dp"
        app:itemIconTint="@drawable/bottom_navigation_color_selector"
        app:labelVisibilityMode="unlabeled"
        app:menu="@menu/bottom_navigation_menu" />

</LinearLayout>