<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.disease.DiseaseImagePreviewActivity">

    <ImageView
        android:id="@+id/img_upload_preview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="-24dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/bottom_sheet_disease_preview"
        android:scaleType="centerCrop"
        tools:src="@tools:sample/backgrounds/scenic"
        android:contentDescription="@string/image_preview"
        />

    <include
        android:id="@+id/btn_disease_preview_back"
        layout="@layout/image_back_button"/>

    <LinearLayout
        android:id="@+id/bottom_sheet_disease_preview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="24dp"
        android:background="@drawable/top_rounded_linear_layout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="vertical">
        <com.example.bangkitandroid.component.ElevatedButton
            android:id="@+id/btn_upload_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/unggah_gambar"
            android:textSize="12sp"
            android:textStyle="bold"/>
        <com.example.bangkitandroid.component.ElevatedButton
            android:id="@+id/btn_retake_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ambil_ulang"
            android:textSize="12sp"
            android:textStyle="bold"/>
    </LinearLayout>
    <include
        android:id="@+id/layout_preview_loading"
        layout="@layout/loading_full_screen"/>

</androidx.constraintlayout.widget.ConstraintLayout>